--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,31 @@ header {
     }
 }
 
+@media screen and (max-width: 1000px) {
+    #navbar {
+        width: 50%;
+    }
+
+    #navbar ul li {
+        font-size: 1rem;
+        margin: 0 0.2rem;
+        padding: 0.2rem;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    #navbar {
+        width: 70%;
+    }
+
+    #navbar ul li {
+        font-size: 0.9rem;
+        margin: 0 0.15rem;
+        padding: 0.1rem;
+    }
+}
+
+
 /* WELCOME SECTION */
 
 #welcome {
