--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ header {
     width: 100%;
     background-color: var(--pink);
     gap: 5vh;
-    padding: 30px;
+    padding: 2rem;
     font-size: 1.2rem;
 
     display: flex;
@@ -158,7 +158,7 @@ header {
 
 .intro {
     width: 80%;
-    margin: 20px;
+    margin: 1.2rem;
     text-align: center;
 }
 
@@ -179,11 +179,12 @@ header {
 }
 
 .product-img {
-    width: max(20vw, 200px);
+    width: 375px;
     height: auto;
     object-fit: cover;
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 1.5rem;
+    border-radius: 2%;
+    margin: 2rem;
 }
 
 .product-text {
@@ -317,6 +318,10 @@ header {
     .bg-text p {
         font-size: 2rem;
     }
+
+    .product-img {
+        width: 325px;
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -356,8 +361,20 @@ header {
         font-size: 1.5rem;
     }
 
+    .product-img {
+        width: 275px;
+    }
+
     .testimonial {
         width: 285px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    
+    .product-img {
+        width: 200px;
+        margin: 1rem 0.5rem;
     }
 }
 
