--- a/styles.css
+++ b/styles.css
@@ -249,10 +249,11 @@ header {
 /* CONTACT SECTION */
 
 #contact {
-    height: max(50vh, 25rem);
     width: 100%;
     background-color: var(--light-gray);
     color: var(--white);
+    padding: 1.5rem 0.8rem;
+    text-align: center;
 
     display: flex;
     flex-direction: column;
@@ -265,13 +266,13 @@ header {
 }
 
 #contact p {
-    margin-top: 12px;
+    margin-top: 0.8rem;
     font-size: 1.5rem; 
     color: var(--white);
 }
 
 #reach {
-    margin: 60px 20px;
+    margin: 1.2rem 0.7rem;
 
     display: flex;
     flex-flow: row wrap;
@@ -280,7 +281,7 @@ header {
   }
   
 .contact-detail {
-    margin: 20px;
+    margin: 1rem;
     font-size: 1.2rem;
     text-decoration: none;
     color: var(--yellow);
@@ -376,6 +377,20 @@ header {
         width: 200px;
         margin: 1rem 0.5rem;
     }
+
+    #contact h1 {
+        font-size: 2rem;
+    }
+
+    .contact-detail {
+        font-size: 1rem;
+    }
 }
 
 /* FOOTER */
+
+footer {
+    width: 100%;
+    height: 2rem;
+    background-color: var(--black);
+}
