updated home.html and styles.css
- moved the "overlay" div element within the bg-img div
- solved the issue where both div had different heights
- removed the absolute positioning from overlay container
- changed background color of welcome section to light gray

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ header {
 
 #welcome {
     height: 100vh;
-    background-color: var(--white);
+    background-color: var(--light-gray);
 }
 
 .bg-img {
@@ -99,18 +99,14 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    /* background-blend-mode:soft-light; */
     z-index: -1;
 }
 
 .overlay {
     background-color: rgba(96, 72, 72, .6);
-    position: absolute;
     width: 100%;
     height: 100%; 
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     z-index: 0;
 }
 
