--- a/styles.css
+++ b/styles.css
@@ -107,17 +107,18 @@ header {
     background-color: rgba(96, 72, 72, .6);
     width: 100%;
     height: 100%; 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     z-index: 0;
 }
 
 .bg-text {
     color: var(--white);
     font-family: "Ms Madi", cursive;
-    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 
     text-align: center;
     z-index: 1;
@@ -133,7 +134,7 @@ header {
 
 .bg-text p {
     font-size: 3rem;
-    margin-top: 20px;
+    margin-top: 1.3rem;
 }
 
 /* PRODUCTS SECTION */
@@ -299,10 +300,6 @@ header {
         padding: 0.2rem;
     }
 
-    .product-info {
-        width: 90%;
-    }
-
     .bg-text h2 {
         font-size: 3rem;
     }
@@ -313,6 +310,10 @@ header {
     
     .bg-text p {
         font-size: 2rem;
+    }
+
+    .product-info {
+        width: 90%;
     }
 
     .product-img {
@@ -331,20 +332,6 @@ header {
         padding: 0.1rem;
     }
 
-    .product-info {
-        width: 95%;
-    }
-
-    #contact h1 {
-        font-size: 2rem;
-    }
-
-    #contact p {
-        margin-top: 12px;
-        font-size: 1.1rem; 
-        color: var(--white);
-    }
-
     .bg-text h2 {
         font-size: 2.5rem;
     }
@@ -357,12 +344,26 @@ header {
         font-size: 1.5rem;
     }
 
+    .product-info {
+        width: 95%;
+    }
+
     .product-img {
         width: 275px;
     }
 
     .testimonial {
         width: 285px;
+    }
+
+    #contact h1 {
+        font-size: 2rem;
+    }
+
+    #contact p {
+        margin-top: 12px;
+        font-size: 1.1rem; 
+        color: var(--white);
     }
 }
 
